fix overflow for smaller screens

--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -41,7 +41,7 @@
 .link a {
   color: var(--color-text);
   text-decoration: none;
-  font-size: 21px;
+  font-size: 20px;
   font-weight: 400;
   letter-spacing: 1.5px;
 }
@@ -59,6 +59,6 @@
   }
 
   .links {
-    align-items: center;
+    align-items: flex-start;
   }
 }
