--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -19,7 +19,7 @@
 }
 
 .title {
-  font-size: 72px;
+  font-size: 68px;
   font-weight: 900;
   margin-bottom: 33px;
   font-family: var(--font-roboto);
@@ -37,6 +37,7 @@
   font-size: 30px;
   font-family: var(--font-roboto);
   margin-bottom: 52px;
+  text-align: justify;
 }
 
 .contactBtn {
@@ -47,13 +48,13 @@
   font-size: 30px;
   font-weight: 600;
   padding: 17px 26px;
-  box-shadow: 0 0 4px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.25);
 }
 
 .heroImg {
-  width: 50%;
-
+  width: 40%;
   z-index: 1;
+  margin-left: 30px;
 
   animation-name: floating;
   animation-duration: 3s;
@@ -78,7 +79,7 @@
   width: 50vw;
   height: 50vw;
   min-width: 350px;
-  min-height: 350px;
+  min-width: 350px;
   top: -128px;
   left: -10vw;
   border-radius: 764px;
@@ -92,7 +93,7 @@
   width: 70vw;
   height: 50vw;
   min-width: 350px;
-  min-height: 250px;
+  min-width: 250px;
   top: 246px;
   left: 10vw;
   right: -25vw;
